src/objects/Event_Session__c.object
<CustomObject>
    <fields>
        <fullName>A_V_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has A/V form been received?</inlineHelpText>
        <label>A/V Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audio_URL__c</fullName>
        <label>Audio URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Audio_Visual_Requirements__c</fullName>
        <label>Audio/Visual Requirements</label>
        <type>TextArea</type>
    </fields>
     <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Sessions</relationshipLabel>
        <relationshipName>Event_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Event__c</fullName>
        <formula>HYPERLINK(&quot;./&quot; &amp;  Track__r.Event__r.Id  ,  Track__r.Event__r.Name , &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used for web integrations if you wish to publish data in Salesforce to your website.</description>
        <label>Publish to Web?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_Setup__c</fullName>
        <label>Room Setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Hands-on training</fullName>
                </value>
                <value>
                    <fullName>Rounds</fullName>
                </value>
                <value>
                    <fullName>Theater</fullName>
                </value>
                <value>
                    <fullName>Crescents</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Abstract__c</fullName>
        <label>Session Abstract</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Code__c</fullName>
        <externalId>true</externalId>
        <label>Session Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_Facilitator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session Facilitator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Practitioner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Session Facilitators</relationshipLabel>
        <relationshipName>Event_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Format__c</fullName>
        <label>Session Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation with customer(s)</fullName>
                </value>
                <value>
                    <fullName>Hands-on training</fullName>
                </value>
                <value>
                    <fullName>Panel with customers</fullName>
                </value>
                <value>
                    <fullName>Presentation without customer(s)</fullName>
                </value>
                <value>
                    <fullName>Demo with customer(s)</fullName>
                </value>
                <value>
                    <fullName>Customer Panel and Demo</fullName>
                </value>
                <value>
                    <fullName>Keynote</fullName>
                </value>
                <value>
                    <fullName>Partner Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Notes__c</fullName>
        <label>Session Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Rating__c</fullName>
        <inlineHelpText>Enter session evaluation score (1-5, with 5 as the highest) - if applicable</inlineHelpText>
        <label>Session Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Slot__c</fullName>
        <label>Session Slot Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Status__c</fullName>
        <label>Session Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abstract - Submitted</fullName>
                </value>
                <value>
                    <fullName>Abstract - Copy Edited</fullName>
                </value>
                <value>
                    <fullName>Abstract - Finalized</fullName>
                </value>
                <value>
                    <fullName>Creative Brief - Submitted</fullName>
                </value>
                <value>
                    <fullName>Draft Slides - Submitted</fullName>
                </value>
                <value>
                    <fullName>Slides - Submitted</fullName>
                </value>
                <value>
                    <fullName>Dry Run - Scheduled</fullName>
                </value>
                <value>
                    <fullName>Dry Run - Complete</fullName>
                </value>
                <value>
                    <fullName>Slides - Locked</fullName>
                </value>
                <value>
                    <fullName>Session cancelled</fullName>
                </value>
                <value>
                    <fullName>Creative Brief - Approved</fullName>
                </value>
                <value>
                    <fullName>Ready to Publish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Theme__c</fullName>
        <label>Session Theme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Theme 1</fullName>
                </value>
                <value>
                    <fullName>Theme 2</fullName>
                </value>
                <value>
                    <fullName>Theme 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Time__c</fullName>
        <label>Session Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slides_URL__c</fullName>
        <label>Slides URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <label>Sponsor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsored__c</fullName>
        <label>Sponsored?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Track</label>
        <referenceTo>Track__c</referenceTo>
        <relationshipLabel>Event Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Event Sessions</relationshipLabel>
        <relationshipName>Event_Session_Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Survey_Responses__c</fullName>
        <label># of Survey Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Event Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>